--- a/react-covid-tracker/src/App.css
+++ b/react-covid-tracker/src/App.css
@@ -10,3 +10,36 @@
   margin-bottom: 20px;
 
 }
+
+body{
+  background-color: #f5f6fa;
+}
+
+
+.app__stats{
+  display: flex;
+  justify-content:space-between;
+
+}
+
+.app{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+
+}
+
+.app__left{
+  flex: 0.9;
+}
+
+
+
+
+
+@media (max-width: 990px){
+  .app{
+    flex-direction: column;
+  }
+
+}
